--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dj-database-url = "^1.0.0"
 whitenoise = "^6.2.0"
 psycopg2 = "^2.9.3"
 sentry-sdk = "^1.9.8"
+factory-boy = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
