--- a/compose.yml
+++ b/compose.yml
@@ -28,7 +28,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres", "-d", "postgres"]
+      test: ["CMD", "pg_isready", "-U", "postgres_user", "-d", "postgres_db"]
       interval: 10s
       timeout: 5s
       retries: 5
