--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ flake8 = "^5.0.4"
 pre-commit = "^2.20.0"
 bandit = "^1.7.4"
 detect-secrets = "^1.3.0"
+django-types = "^0.16.0"
 
 [build-system]
 requires = ["poetry-core"]
