--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,21 +24,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
       - name: Install Poetry
         run: curl -sSL https://install.python-poetry.org | python3 -
         env:
           POETRY_VERSION: "1.2.2"
-      - name: Set up Poetry cache
-        uses: actions/cache@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            poetry-
+          python-version: "3.10"
+          cache: poetry
       - name: Install dependencies with Poetry
         run: poetry install
       - name: Run black
