--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,23 +8,24 @@ packages = [{include = "django3_template"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^3.2"
+Django = "^3.2.16"
 django-extensions = "^3.2.1"
 gunicorn = "^20.1.0"
 dj-database-url = "^1.0.0"
 whitenoise = "^6.2.0"
-psycopg2 = "^2.9.3"
-sentry-sdk = "^1.9.8"
+psycopg2 = "^2.9.5"
+sentry-sdk = "^1.10.1"
 factory-boy = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.8.0"
+black = "^22.10.0"
 isort = "^5.10.1"
 flake8 = "^5.0.4"
 pre-commit = "^2.20.0"
 bandit = "^1.7.4"
 detect-secrets = "^1.4.0"
 django-types = "^0.16.0"
+poetryup = "^0.12.3"
 
 [build-system]
 requires = ["poetry-core"]
