--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ bandit = "^1.7.4"
 detect-secrets = "^1.4.0"
 django-types = "^0.16.0"
 poetryup = "^0.12.3"
+dslr = "^0.4.0"
 
 [build-system]
 requires = ["poetry-core"]
