--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,3 +30,7 @@ repos:
       - id: detect-secrets
         args: ["--baseline", ".secrets.baseline"]
         exclude: package.lock.json
+  - repo: https://github.com/necaris/pre-commit-pyright
+    rev: 1.1.53
+    hooks:
+      - id: pyright
