--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,11 @@ jobs:
         with:
           python-version: "3.10"
           cache: poetry
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
       - name: Install dependencies with Poetry
         run: poetry install
       - name: Run black
