--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,3 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -34,6 +32,7 @@ repos:
     rev: 1.1.53
     hooks:
       - id: pyright
+        additional_dependencies: ["pyright@1.1.278"]
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
     hooks:
