Add actions for pyright and prettier

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,6 +55,12 @@ jobs:
       - name: Run detect-secrets
         run: poetry run detect-secrets scan --baseline .secrets.baseline
         if: always()
+      - name: Run pyright
+        run: poetry run npx pyright .
+        if: always()
+      - name: Run prettier
+        run: poetry run npx prettier --check .
+        if: always()
       - name: Collect staticfiles
         run: poetry run python3 manage.py collectstatic --noinput
       - name: Run tests
