--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Run detect-secrets
         run: poetry run detect-secrets scan --baseline .secrets.baseline
         if: always()
+      - name: Run djhtml
+        run: poetry run djhtml --check .
+        if: always()
       - name: Run pyright
         run: poetry run npx pyright .
         if: always()
