--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,10 @@ updates:
     directory: /
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: "Django"
+        versions:
+          - ">= 4.0"
   - package-ecosystem: npm
     directory: /
     schedule:
