--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "node": ">=18.0.0 <19.0.0",
     "npm": ">=8.0.0 <9.0.0"
   },
-  "dependencies": {
+  "devDependencies": {
+    "npm-check-updates": "^16.3.18",
     "prettier": "^2.7.1",
-    "pyright": "^1.1.278"
+    "pyright": "^1.1.279"
   }
 }
