--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgres://postgres_user:postgres_password@postgres:5432/postgres_db
-      DJANGO_SETTINGS_MODULE: django3_template.settings.dev
+      DJANGO_SETTINGS_MODULE: django_template.settings.dev
     env_file: .env
     volumes:
       - .:/app
