--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "django3-template",
+  "name": "django-template",
   "version": "0.1.0",
   "engines": {
     "node": ">=18.0.0 <19.0.0",
