--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "django3-template"
+name = "django-template"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "django3_template"}]
+packages = [{include = "django_template"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
