--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "django_template"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^3.2.16"
+Django = "4.1.5"
 django-extensions = "^3.2.1"
 gunicorn = "^20.1.0"
 dj-database-url = "^1.2.0"
