--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "django-template",
   "version": "0.1.0",
   "engines": {
-    "node": ">=18.0.0 <19.0.0",
-    "npm": ">=8.0.0 <9.0.0"
+    "node": ">=18.0.0 <19.0.0"
   },
   "devDependencies": {
     "npm-check-updates": "^16.6.3",
