--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 name: Tests
 
 on:
-  push:
+  pull_request:
 
 jobs:
   tests:
@@ -78,6 +78,10 @@ jobs:
 
       - name: Run prettier
         run: poetry run npx prettier --check .
+        if: always()
+
+      - name: Check for missing migrations
+        run: poetry run python manage.py makemigrations --check --noinput
         if: always()
 
       - name: Collect staticfiles
