--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,20 @@ factory-boy = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
-isort = "^5.12.0"
-flake8 = "^6.0.0"
+ruff = "^0.0.245"
 pre-commit = "^3.0.4"
 bandit = "^1.7.4"
 detect-secrets = "^1.4.0"
-django-types = "^0.16.0"
-dslr = "^0.4.0"
 djhtml = "^2.0.0"
+dslr = "^0.4.0"
+django-types = "^0.16.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+select = ["E", "F", "W", "C90", "I"]
+
+[tool.ruff.per-file-ignores]
+"django_template/*/migrations/*.py" = ["E501"]
