--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
       - id: black
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.245
+    rev: v0.0.253
     hooks:
       - id: ruff
         args:
@@ -34,7 +34,7 @@ repos:
         exclude: package.lock.json
 
   - repo: https://github.com/rtts/djhtml
-    rev: v2.0.0
+    rev: 3.0.2
     hooks:
       - id: djhtml
 
@@ -43,7 +43,7 @@ repos:
     hooks:
       - id: pyright
         additional_dependencies:
-          - pyright@1.1.295
+          - pyright@1.1.296
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
