--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ django-extensions = "^3.2.1"
 gunicorn = "^20.1.0"
 dj-database-url = "^1.3.0"
 whitenoise = "^6.4.0"
-psycopg2 = "^2.9.5"
+psycopg = "^3.1.8"
 sentry-sdk = "^1.18.0"
 factory-boy = "^3.2.1"
 
