Add step to install dependencies with npm

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,6 +51,9 @@ jobs:
       - name: Install dependencies with Poetry
         run: poetry install
 
+      - name: Install dependencies with npm
+        run: npm install
+
       - name: Run black
         run: poetry run black --check --diff .
         if: always()
