--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,12 +41,17 @@ repos:
     hooks:
       - id: djhtml
 
-  - repo: https://github.com/necaris/pre-commit-pyright
-    rev: 1.1.53
+  - repo: local
     hooks:
       - id: pyright
+        name: pyright
+        entry: pyright
+        language: node
+        types:
+          - python
+        pass_filenames: false
         additional_dependencies:
-          - pyright@1.1.302
+          - pyright@1.1.303
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
