--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,13 +47,10 @@ repos:
     hooks:
       - id: pyright
         name: pyright
-        entry: pyright
-        language: node
+        entry: poetry run pyright
+        language: system
         types:
           - python
-        pass_filenames: false
-        additional_dependencies:
-          - pyright@1.1.313
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
