--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,17 +42,8 @@ jobs:
           python-version: "3.11"
           cache: poetry
 
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-
       - name: Install dependencies with Poetry
         run: poetry install
-
-      - name: Install dependencies with npm
-        run: npm ci
 
       - name: Run black
         run: poetry run black --check --diff .
@@ -75,13 +66,11 @@ jobs:
         if: always()
 
       - name: Run pyright
-        # This needs to be run inside the project's virtualenv to be able to use
-        # django-types
-        run: poetry run npm exec -- pyright .
+        run: poetry run pyright .
         if: always()
 
       - name: Run prettier
-        run: npm exec -- prettier --check .
+        run: npx prettier@2.8.8 --check .
         if: always()
 
       - name: Check for missing migrations
