--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,17 +47,15 @@ repos:
     hooks:
       - id: pyright
         name: pyright
-        entry: pyright
-        language: node
+        entry: poetry run pyright
+        language: system
         types:
           - python
-        pass_filenames: false
-        additional_dependencies:
-          - pyright@1.1.313
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
     hooks:
       - id: prettier
         additional_dependencies:
+          # Make sure prettier version is in sync with CI
           - prettier@2.8.8
