--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ select = ["E", "F", "W", "C90", "I"]
 
 [tool.ruff.per-file-ignores]
 "django_template/*/migrations/*.py" = ["E501"]
+
+[tool.bandit]
+exclude_dirs = ["tests"]
