--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,25 +8,25 @@ packages = [{include = "django_template"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-Django = "^4.2.5"
+Django = "^4.2.6"
 django-extensions = "^3.2.3"
 gunicorn = "^21.2.0"
 dj-database-url = "^2.1.0"
 whitenoise = "^6.5.0"
-psycopg = "^3.1.10"
+psycopg = "^3.1.12"
 sentry-sdk = "^1.31.0"
 factory-boy = "^3.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
-ruff = "^0.0.290"
+ruff = "~0.0.292"
 pre-commit = "^3.4.0"
 bandit = "^1.7.5"
 detect-secrets = "^1.4.0"
 djhtml = "^3.0.6"
 dslr = {version="^0.4.0", extras=["psycopg2-binary"]}
 django-types = "^0.17.0"
-pyright = "^1.1.327"
+pyright = "^1.1.329"
 
 [build-system]
 requires = ["poetry-core"]
