--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,21 +12,21 @@ Django = "^4.2.6"
 django-extensions = "^3.2.3"
 gunicorn = "^21.2.0"
 dj-database-url = "^2.1.0"
-whitenoise = "^6.5.0"
+whitenoise = "^6.6.0"
 psycopg = "^3.1.12"
-sentry-sdk = "^1.31.0"
+sentry-sdk = "^1.32.0"
 factory-boy = "^3.3.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.9.1"
-ruff = "~0.0.292"
-pre-commit = "^3.4.0"
+black = "^23.10.0"
+ruff = "^0.1.1"
+pre-commit = "^3.5.0"
 bandit = "^1.7.5"
 detect-secrets = "^1.4.0"
 djhtml = "^3.0.6"
 dslr = {version="~0.4.0", extras=["psycopg2-binary"]}
-django-types = "~0.18.0"
-pyright = "^1.1.329"
+django-types = "~0.19.1"
+pyright = "^1.1.332"
 
 [build-system]
 requires = ["poetry-core"]
