--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,17 +7,13 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
 
-  - repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.1.7
     hooks:
       - id: ruff
         args:
           - --fix
+      - id: ruff-format
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.5
