--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,24 +8,24 @@ packages = [{include = "django_template"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-Django = "^4.2.8"
+Django = "^4.2.10"
 django-extensions = "^3.2.3"
 gunicorn = "^21.2.0"
 dj-database-url = "^2.1.0"
 whitenoise = "^6.6.0"
-psycopg = "^3.1.15"
-sentry-sdk = "^1.39.1"
+psycopg = "^3.1.18"
+sentry-sdk = "^1.40.4"
 factory-boy = "^3.3.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "~0.1.8"
-pre-commit = "^3.6.0"
-bandit = "^1.7.6"
+ruff = "^0.2.1"
+pre-commit = "^3.6.1"
+bandit = "^1.7.7"
 detect-secrets = "^1.4.0"
 djhtml = "^3.0.6"
 dslr = {version="~0.4.0", extras=["psycopg2-binary"]}
 django-types = "~0.19.1"
-pyright = "^1.1.341"
+pyright = "^1.1.350"
 
 [build-system]
 requires = ["poetry-core"]
