--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,24 +8,24 @@ packages = [{include = "django_template"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-Django = "^4.2.10"
+Django = "^4.2.11"
 django-extensions = "^3.2.3"
 gunicorn = "^21.2.0"
 dj-database-url = "^2.1.0"
 whitenoise = "^6.6.0"
 psycopg = "^3.1.18"
-sentry-sdk = "^1.40.6"
+sentry-sdk = "^1.41.0"
 factory-boy = "^3.3.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.2.1"
+ruff = "*"
 pre-commit = "^3.6.2"
-bandit = "^1.7.7"
+bandit = "^1.7.8"
 detect-secrets = "^1.4.0"
 djhtml = "^3.0.6"
-dslr = {version="~0.4.0", extras=["psycopg2-binary"]}
-django-types = "~0.19.1"
-pyright = "^1.1.351"
+dslr = {version="*", extras=["psycopg2-binary"]}
+django-types = "*"
+pyright = "^1.1.353"
 
 [build-system]
 requires = ["poetry-core"]
