--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,10 @@ pyright = "^1.1.353"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.ruff]
+[tool.ruff.lint]
 select = ["E", "F", "W", "C90", "I"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "django_template/*/migrations/*.py" = ["E501"]
 
 [tool.bandit]
