--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
 name = "django-template"
-version = "0.1.0"
+version = "0.0.0"
 description = ""
 authors = ["boggs <hello@boggs.xyz>"]
-readme = "README.md"
-packages = [{include = "django_template"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
