Move back dev environment variables to compose.yml

--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,9 @@ services:
     command: tail -f /dev/null
     ports:
       - "8000:8000"
-    env_file: .env
+    environment:
+      DATABASE_URL: postgres://postgres_user:postgres_password@postgres:5432/postgres_db  # pragma: allowlist secret
+      DJANGO_SETTINGS_MODULE: django_template.settings.dev
     volumes:
       - .:/app
     init: true
