--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,11 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "C90", "I"]
+select = ["E", "F", "W", "C90", "I", "SIM", "DJ", "T10"]
+exclude = ["django_template/*/migrations/*.py"]
 
-[tool.ruff.lint.per-file-ignores]
-"django_template/*/migrations/*.py" = ["E501"]
+[tool.ruff.format]
+exclude = ["django_template/*/migrations/*.py"]
 
 [tool.bandit]
 exclude_dirs = ["tests"]
