--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ whitenoise = "^6.8.2"
 psycopg = "^3.2.3"
 sentry-sdk = "^2.19.2"
 factory-boy = "^3.3.1"
+ipython = "^8.31.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
@@ -25,6 +26,10 @@ djhtml = "^3.0.7"
 dslr = {version="*", extras=["psycopg2-binary"]}
 django-types = "*"
 pyright = "^1.1.391"
+watchdog = "^6.0.0"
+django-browser-reload = "^1.17.0"
+django-silk = "^5.3.2"
+werkzeug = "^3.1.3"
 
 [build-system]
 requires = ["poetry-core"]
