Replace djhtml with djLint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,11 +34,11 @@ repos:
           - .secrets.baseline
         exclude: package.lock.json
 
-  - repo: https://github.com/rtts/djhtml
-    rev: 3.0.7
+  - repo: https://github.com/djlint/djLint
+    rev: v1.36.3
     hooks:
-      - id: djhtml
-        entry: djhtml --tabwidth 2
+      - id: djlint-reformat-django
+      - id: djlint-django
 
   - repo: https://github.com/ComPWA/taplo-pre-commit
     rev: v0.9.3
